fix details alignment in person details when using person-card

--- a/packages/mgt-components/src/components/mgt-person/mgt-person.scss
+++ b/packages/mgt-components/src/components/mgt-person/mgt-person.scss
@@ -45,6 +45,7 @@ $person-line4-text-line-height: var(--person-line4-text-line-height, 16px);
     [slot='anchor'] {
       display: flex;
       cursor: pointer;
+      align-items: center;
 
       &.vertical {
         flex-direction: column;
